cogmi2026/assets/css/header-v3.css
/* ... */
.header-v3 .mega-menu .dropdown.mega-menu-fullwidth .dropdown-menu {
  	left: 0;
  	right: 0;
  	overflow: hidden;
}

@media (min-width: 992px) {
	.header-v3 .mega-menu .dropdown.mega-menu-fullwidth .dropdown-menu {
  		margin-left: 10px;
  		margin-right: 15px;
	}
}

/*Equal Height Lists*/
@media (min-width: 992px) {
	.header-v3 .mega-menu .equal-height {
	    display: -webkit-flex;
	    display: -ms-flexbox;
	    display: flex;
	    
	    /*-webkit-flex-wrap: wrap;
	    -ms-flex-wrap: wrap;
	    flex-wrap: wrap;*/
	}

	.header-v3 .mega-menu .equal-height-in {
	    display: -webkit-flex;
	    display: -ms-flexbox;
	    display: flex;
	}
}

/*Mega Menu Style Effect*/
.header-v3 .mega-menu .equal-height-list h3 {
	font-size: 15px;
	font-weight: 400;
	padding: 0 10px 0 13px;
	text-transform: uppercase;
}

/*Space for only Big Resolution*/
@media (min-width: 992px) {
	.header-v3 .mega-menu .big-screen-space {
		margin-bottom: 20px;
	}
}

/*Mega Menu Content*/
@media (min-width: 992px) {
    .header-v3 .mega-menu .equal-height-in {
        padding: 20px 0;
        border-left: 1px solid #eee;
    }

    .header-v3 .mega-menu .equal-height-in:first-child {
        border-left: none;
        margin-left: -1px;
    }

    .header-v3 .mega-menu .equal-height-list {
    	width: 100%;
    }

    .header-v3 .mega-menu .equal-height-list li a {
        display: block;
        position: relative;
        border-bottom: none;
        padding: 5px 10px 5px 15px;
    }

    .header-v3 .mega-menu .equal-height-list a:hover {
    	text-decoration: none;
    }
    
    /*Dropdown Arrow Icons*/
    .header-v3 .mega-menu .mega-menu-fullwidth li a {
    	padding: 5px 10px 5px 30px;	
    }

    .header-v3 .mega-menu .mega-menu-fullwidth li a:after {
        top: 7px;
        left: 15px;
        font-size: 11px;
        content: "\f105";
        position: absolute;
        font-weight: normal;
        display: inline-block;
        font-family: FontAwesome;
    }

    /*Dropdown Arrow Icons Disable class*/
    .header-v3 .mega-menu .mega-menu-fullwidth .disable-icons li a {
    	padding: 5px 10px 5px 15px;
    }

    .header-v3 .mega-menu .mega-menu-fullwidth .disable-icons li a:after {
    	display: none;
    }
}

/*Space Effect inside the container to avoid scroll bar*/
@media (min-width: 737px) and (max-width: 991px) {
	.header-v3 .mega-menu .mega-menu-content .container {
		width: 690px !important;
	}

	.header-v3 .mega-menu .equal-height {
		margin-right: 0;
	}

	.header-v3 .mega-menu .equal-height-in {
    	padding-right: 0;
    	margin-right: -15px;
    }
}

@media (max-width: 991px) {
	.header-v3 .mega-menu .equal-height {
		margin-right: 0;
	}

	.header-v3 .mega-menu .equal-height-in {
    	padding-right: 0;
    }
}

/*Equal Hight List Style*/
@media (max-width: 991px) {
    .header-v3 .mega-menu .dropdown.mega-menu-fullwidth .dropdown-menu {
        width: auto;
    }

    .header-v3 .mega-menu .equal-height-in,
    .header-v3 .mega-menu .equal-height-list {
        display: block;
    }

    .header-v3 .mega-menu .mega-menu-fullwidth .dropdown-menu > li > ul {
        display: block;
    }

    /*Equal Height List Style*/
    .header-v3 .mega-menu .equal-height-list h3 { 
		color: #333; 
		margin: 0 0 5px;
		font-size: 13px; 
		font-weight: 400; 
		padding: 6px 25px 5px; 
		border-bottom: solid 1px #eee;
	}

	.header-v3 .mega-menu .equal-height-list li {
		margin-left: 15px;
	}

	.header-v3 .mega-menu .equal-height-list li a {
		color: #687074;
		display: block;
		font-size: 13px; 
		font-weight: 400; 
		padding: 6px 25px; 
		border-bottom: solid 1px #eee;
	}

	.header-v3 .mega-menu .equal-height-list > h3.active,
	.header-v3 .mega-menu .equal-height-list > .active > a,
	.header-v3 .mega-menu .equal-height-list > .active > a:hover,
	.header-v3 .mega-menu .equal-height-list > .active > a:focus {
		color: #555;
		background-color: #e7e7e7;
	}

	.header-v3 .mega-menu .equal-height-list li a:hover {
		color: #333;
		text-decoration: none;
	}
}


/*--------------------------------------------------
    [6. Header - Fixed]
----------------------------------------------------*/

/*Header*/
.header-fixed .header-v3 {
	height: 79px;
}

.header-fixed .header-v3.header-fixed-shrink {
	top: 0;
	left: 0;
	width: 100%;
	height: 95px;
	z-index: 9999;
	position: fixed;
	margin-top: -35px;
	border-bottom: none;
	box-shadow: 0 0 3px #bbb;
	background: rgba(255,255,255, 0.96); 
	-webkit-transition: height 0.4s;
	-moz-transition: height 0.4s;
	transition: height 0.4s;
}

/*Brand*/
.header-fixed .header-v3.header-fixed-shrink .navbar-brand { 
	top: 47px;
	z-index: 1;
	position: relative;
	padding: 0 10px 10px;
}

.header-fixed .header-v3.header-fixed-shrink .navbar-brand img {
	width: 90%;
}

.header-fixed .header-v3.header-fixed-shrink .search,
.header-fixed .header-v3.header-fixed-shrink .active a {
	border-bottom: none !important;
}

@media (max-width: 991px) {
	/*Header*/
	.header-fixed .header-v3,
	.header-fixed .header-v3.header-fixed-shrink {
		height: inherit;
		position: relative;
	}
}

@media (min-width: 992px) {
	.header-fixed .header-v3.header-fixed-shrink .navbar-nav > li > a {
		padding: 56px 30px 18px 20px;
		border-bottom: solid 1px transparent !important;
	}

	.header-fixed .header-v3.header-fixed-shrink .dropdown > a:after {
		top: 57px;
	}

	/*Search Bar*/
	.header-fixed .header-v3.header-fixed-shrink .search {
		margin-top: 49px;
		padding: 8px !important;
		color: #585f69 !important;
		background: none !important;
	}

	.header-fixed .header-v3.header-fixed-shrink .search-open {
		top: 95px;
		border-top: none;
		background: rgba(255,255,255, 0.9);	
	}
}

